--- a/app/stylesheets/sass/layout/_l-layout.sass
+++ b/app/stylesheets/sass/layout/_l-layout.sass
@@ -3,7 +3,6 @@
   +clearfix
   +outer-container
   +row
-  overflow: hidden
   +media($desktop)
     padding: 0 2%
 
