--- a/app/stylesheets/sass/modules/_m-slider.sass
+++ b/app/stylesheets/sass/modules/_m-slider.sass
@@ -3,7 +3,6 @@
   font-size: em(40)
   width: 100%
   min-height: 250px
-  overflow: hidden
   position: relative
   border: 20px solid #FFF
   margin-top: 20px
